--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,7 +1,19 @@
 
 body {
-  margin: 0;
+  
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url("wallpaaper.jpg") ;
+  background-size: cover; /* or contain depending on what you want */
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  width: 1200px;
+  height:600px;
+  text-align:center;
+  margin:auto;
+  padding:0;
+
+
 }
 
 .topnav {
