--- a/code/public/StyleSheet.css
+++ b/code/public/StyleSheet.css
@@ -21,6 +21,12 @@ body {
   background-color: #333;
 }
 
+.writing {
+  float: left;
+  width: 500px;
+  color: white;
+}
+
 .topnav a {
   float: left;
   color: #f2f2f2;
